tests/machine/x/cpp/outer_join.error
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:16:12: error: ‘o’ was not declared in this scope
   16 |   decltype(o) order;
      |            ^
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:16:12: error: ‘o’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:17:12: error: ‘c’ was not declared in this scope
   17 |   decltype(c) customer;
      |            ^
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:17:12: error: ‘c’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:34:36: error: cannot convert ‘Order’ to ‘int’ in initialization
   34 |           __items.push_back(Result{o, c});
      |                                    ^
      |                                    |
      |                                    Order
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:38:36: error: cannot convert ‘Order’ to ‘int’ in initialization
   38 |           __items.push_back(Result{o, c});
      |                                    ^
      |                                    |
      |                                    Order
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:51:34: error: request for member ‘id’ in ‘row.Result::order’, which is of non-class type ‘int’
   51 |           std::cout << row.order.id;
      |                                  ^~
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:55:37: error: request for member ‘name’ in ‘row.Result::customer’, which is of non-class type ‘int’
   55 |           std::cout << row.customer.name;
      |                                     ^~~~
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:59:34: error: request for member ‘total’ in ‘row.Result::order’, which is of non-class type ‘int’
   59 |           std::cout << row.order.total;
      |                                  ^~~~~
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:66:34: error: request for member ‘id’ in ‘row.Result::order’, which is of non-class type ‘int’
   66 |           std::cout << row.order.id;
      |                                  ^~
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:74:34: error: request for member ‘total’ in ‘row.Result::order’, which is of non-class type ‘int’
   74 |           std::cout << row.order.total;
      |                                  ^~~~~
/workspace/mochi/tests/machine/x/cpp/outer_join.cpp:82:35: error: request for member ‘name’ in ‘row.Result::customer’, which is of non-class type ‘int’
   82 |         std::cout << row.customer.name;
      |                                   ^~~~
